# KMS-activator

./: Activate.cmd  AutoRenewal-Setup.cmd  Check-Activation-Status-vbs.cmd  Check-Activation-Status-wmic.cmd  README.md
$OEM$/$$/Setup/Scripts/Scripts/: setupcomplete.cmd
Source/SppExtComObjHook/: CMakeLists.txt  GNUmakefile  SppExtComObjHook.sln  SppExtComObjHook.vcxproj  SppExtComObjHook.vcxproj.filters  _compile.cmd  avrf.cpp  avrf.hpp  crypto.cpp  crypto.hpp  hooks.cpp  hooks.hpp  i386.ldscript  kms.h  kms_pid.cpp  kms_response.cpp  midl_memory_allocator.cpp  nt_defs.hpp  ntdll.def  ntdll32.lib  ntdll64.lib  pch.hpp  settings.cpp  settings.hpp  winternl.h  x86_64.ldscript
