cmake_minimum_required(VERSION 2.8)
project(SppExtComObjHook CXX)
if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build, options are: Debug Release." FORCE)
endif (NOT CMAKE_BUILD_TYPE)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -Os -s -Wall -Wno-unused -Wno-unused-local-typedefs")
    set(CMAKE_CXX_FLAGS_DEBUG "-g")
    set(CMAKE_CXX_FLAGS_RELEASE "-std=c++17 -municode -mtune=core2 -mno-stack-arg-probe -fvisibility=hidden -fno-ident -fno-stack-check -fno-stack-protector -fno-asynchronous-unwind-tables -fno-exceptions -fno-align-functions -fno-align-labels -fno-align-loops -fno-align-jumps -fmerge-all-constants -fdata-sections -ffunction-sections -funsigned-char")
    set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -nostartfiles -nostdlib -Wl,--gc-sections,--build-id=none,--exclude-all-symbols,--enable-stdcall-fixup,--dynamicbase,--nxcompat,--major-image-version,0,--minor-image-version,0,--major-os-version,6,--minor-os-version,00,--major-subsystem-version,6,--minor-subsystem-version,00,--subsystem,native")
    set(CMAKE_CXX_STANDARD_LIBRARIES "-lntdll -lgcc")
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        # 64 bits
        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-eDllMain,-T,${CMAKE_CURRENT_SOURCE_DIR}/x86_64.ldscript")
    elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
        # 32 bits
        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-e_DllMain@12,-T,${CMAKE_CURRENT_SOURCE_DIR}/i386.ldscript,--large-address-aware")
    endif()
endif ()

set (CMAKE_SHARED_LIBRARY_PREFIX "")
set (CMAKE_SHARED_MODULE_PREFIX "")
add_library(SppExtComObjHook SHARED avrf.cpp crypto.cpp hooks.cpp kms_pid.cpp kms_response.cpp midl_memory_allocator.cpp pch.cpp settings.cpp pch.hpp)
target_link_libraries(SppExtComObjHook)